# EarlyEstate

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: backfill_addresses.yml  bank_portals.yml  digest.yml  insolvency.yml  market_stats.yml  migrate.yml  purge.yml  rescore.yml  search.yml  seed_market_stats.yml  stats.yml
app/: config.py  database.py
app/adapters/: __init__.py  base.py  immowelt.py  insolvency.py  lbs.py  sparkasse.py  zvg.py
app/alerts/: __init__.py  base.py  email.py  onoffice.py  telegram.py  webhook.py
app/api/: main.py
app/api/routes/: admin.py  events.py  leads.py  matches.py  sources.py
app/jobs/: run_once.py  runner.py  seed.py
app/models/: __init__.py  alert.py  asset_lead.py  event.py  job.py  match_candidate.py  party.py  raw_document.py  source.py
app/pipeline/: alerter.py  auditor.py  enrichment.py  entity_resolution.py  geocoder.py  market_seed.py  matcher.py  scheduler.py  value_screening.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_living_area_market_stats.py
scripts/: backfill_addresses.py  db_stats.py  inspect_portal.py  inspect_results.py  search_companies.py  test_scrape.py
tests/test_adapters/: test_insolvency.py
tests/test_pipeline/: test_entity_resolution.py  test_matcher.py
workers/: worker.py
