[project]
name = "earlyestate"
version = "0.1.0"
description = "Early-stage real estate distress screener for Germany"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "geoalchemy2>=0.15",
    "shapely>=2.0",
    "playwright>=1.49",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "apscheduler>=3.11",
    "python-telegram-bot>=21.9",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "rapidfuzz>=3.10",
    "unidecode>=1.3",
    "aiosmtplib>=3.0",
    "jinja2>=3.1",
    "greenlet>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
